run contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <p>{{ t('contact') }}</p>
     </div>
 </div> -->
-
+<p-toast [style]="{ width: 'min(400px, 80vw)' }" />
 <div class="main">
     <app-navbar [pageItems]="[home, cv, about, portfolio, contact]" />
     <span #home id="home">
