--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -8,7 +8,7 @@
                 class="z-30 relative left-1/2 top-full -translate-y-full -translate-x-1/2"
             />
         </div>
-        <div class="text-center description z-50" *transloco="let t; prefix: 'banner'">
+        <div class="text-center description z-50">
             <p [innerHTML]="translations['hello']"></p>
             <p [innerHTML]="translations['resume']"></p>
         </div>
