--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,5 +1,5 @@
 <div class="panel pt-5">
-    <div class="items-flex-panel flex mx-auto gap-8 pt-4" style="max-width: 960px">
+    <div class="items-flex-panel flex mx-auto gap-8 pt-4" style="width: min(1200px, 98%)">
         <div class="w-full">
             <p class="item-title text-2xl">{{ cv?.educationTitle }}</p>
             <div class="panel-item">
