--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div #navbar class="navbar {{ navStyle }} top-0 left-0 w-screen text-center z-50" style="color: #cecece">
-    <button class="menu-button z-50 absolute left-8 h-full" (click)="toggleMenu()">
+    <button class="menu-button z-50 absolute left-5 h-full" (click)="toggleMenu()">
         <i #menuOpen class="menu-button-visible pi pi-bars text-white text-4xl relative left-0 z-30"></i>
         <i #menuClose class="menu-button-hidden pi pi-times text-white text-4xl absolute left-0 z-10"></i>
     </button>
@@ -22,8 +22,12 @@
             ></p>
         </button>
     </div>
-    <div class="absolute h-full top-0 right-10 flex flex-row flag-items">
-        <button (click)="setLanguage('pl')"><span class="fi fi-pl text-3xl"></span></button>
-        <button (click)="setLanguage('en')"><span class="fi fi-gb text-3xl ml-4"></span></button>
+    <div class="absolute h-full top-0 flex flex-row flag-items">
+        <a href="../../../assets/jakub_pruszydlo_cv.pdf" class="self-center" target="_blank"
+            ><div class="button h-fit text-lg self-center">{{ downloadButtonText }}</div></a
+        >
+
+        <button (click)="setLanguage('pl')"><span class="fi fi-pl text-3xl mx-4"></span></button>
+        <button (click)="setLanguage('en')"><span class="fi fi-gb text-3xl"></span></button>
     </div>
 </div>
