--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 600px) {
     .items-grid {
-        @apply grid-cols-2 gap-3 
+        @apply grid-cols-2 gap-3;
     }
 }
 @media screen and (max-width: 600px) {
