--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -41,22 +41,22 @@
             <p>+48 792 302 637</p>
             <p>{{ contact?.localisation }}:</p>
             <p>Ruda Śląska, woj. Śląskie, Polska</p>
-            <div class="flex pt-4">
-                <a href="https://www.linkedin.com/in/jakub-pruszydlo/" target="_blank">
-                    <div class="bg-white rounded-full relative" style="width: 45px; height: 43.7px">
-                        <i class="pi pi-facebook relative" style="top: -3.1px; left: -0.8px"></i>
-                    </div>
-                </a>
-                <a href="https://www.facebook.com/jak.pru" target="_blank">
-                    <div class="bg-white rounded-xl relative ml-5 mr-4" style="width: 47px; height: 45px">
-                        <i class="pi pi-linkedin relative" style="top: -3px; left: -0.8px"></i>
-                    </div>
-                </a>
-                <a href="https://github.com/JPruszydlo" target="_blank">
-                    <div class="bg-white rounded-full relative" style="width: 47px; height: 45px">
-                        <i class="pi pi-github relative" style="top: -3px; left: -0.5px"></i>
-                    </div>
-                </a>
+            <div class="links">
+                <p>
+                    <a href="https://www.facebook.com/jak.pru" target="_blank">
+                        <img src="../../assets/facebook.svg" />
+                    </a>
+                </p>
+                <p>
+                    <a href="https://github.com/JPruszydlo" target="_blank">
+                        <img src="../../assets/github.png" />
+                    </a>
+                </p>
+                <p>
+                    <a href="https://www.linkedin.com/in/jakub-pruszydlo/" target="_blank">
+                        <img src="../../assets/linkedin.png" />
+                    </a>
+                </p>
             </div>
         </div>
     </div>
